[package]
name = "convert-js-macros"
version = "0.1.0"
edition = "2018"
authors = ["René Kijewski <rene.[SURNAME]@fu-berlin.de>"]
license = "ISC OR MIT OR Apache-2.0"
description = "TODO"
homepage = "https://github.com/Kijewski/convert-js"
repository = "https://github.com/Kijewski/convert-js"
categories = ["TODO"]
keywords = ["TODO"]
readme = "README.md"

[lib]
name = "convert_js_macros"
proc-macro = true

[dependencies]
base64 = "0.13"
blake2 = "0.9"
convert-js-impl = { version = "0.1.0", path = "../convert-js-impl" }
fd-lock = "3"
litrs = "0.2"
